# rtpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
cmake/: rtpgConfig.cmake.in
include/rt-pg/: edge.h  graph_element.h  handle.h  node.h  property.h  property_graph.h  traversal.h  types.h
python/rtpg/: __init__.py
src/: edge.cpp  graph_element.cpp  node.cpp  property_graph.cpp  traversal.cpp
src/bindings/: bindings.cpp  common.h  edge.cpp  graph_element.cpp  handle.cpp  node.cpp  opaque_types.h  property_graph.cpp  uuid.cpp
test/: CMakeLists.txt  gtest_pg.cpp  test.py
test/src/: gtest_edge.cpp  gtest_node.cpp  gtest_traversal.cpp
